--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -133,7 +133,7 @@ h6 {
 }
 
 #header .logo img {
-  max-height: 40px;
+  max-height: 60px;
 }
 
 /*--------------------------------------------------------------
@@ -166,7 +166,7 @@ h6 {
   padding: 10px 0 10px 30px;
   font-size: 15px;
   font-weight: 500;
-  color: #fff;
+  color: #000;
   white-space: nowrap;
   transition: 0.3s;
 }
@@ -182,7 +182,7 @@ h6 {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-  color: #d082f7;
+  color: #7947a2;
 }
 
 .navbar .getstarted,
@@ -190,9 +190,9 @@ h6 {
   padding: 8px 20px;
   margin-left: 30px;
   border-radius: 50px;
-  color: #fff;
+  color: #000;
   font-size: 14px;
-  border: 2px solid #d8a3f2;
+  border: 2px solid #7947a2;
   font-weight: 600;
 }
 
@@ -386,16 +386,43 @@ h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 80vh;
+  height: 90vh;
   background: #7947a2;
+  background-image: url("../img/photo3_mini.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-#hero .container {
-  padding-top: 72px;
+#hero p{
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.map-container{
+  background-color: #f9f7f8;
+}
+.imd-map{
+  height: 100vh;
+  margin-top: 60px;
+}
+.imd-map-img{
+  max-width: 100%;
+  height: auto;
+}
+.h1-map{
+  font-size: 4rem;
+}
+.p-map{
+  font-size: 1rem;
+  padding-bottom: 5%;
+}
+.IMD{
+  font-family: "Hedvig+Letters+Serif";
+  padding-top: 15%;
+  padding-left: 5%;
 }
 
 #hero h1 {
-  margin: 0 0 10px 0;
+  margin: 100px 0 10px 0;
   font-size: 48px;
   font-weight: 700;
   line-height: 56px;
@@ -403,7 +430,7 @@ h6 {
 }
 
 #hero h2 {
-  color: rgba(255, 255, 255, 0.6);
+  color: rgba(255, 255, 255, 0.742);
   margin-bottom: 50px;
   font-size: 24px;
 }
@@ -596,13 +623,39 @@ section {
   font-weight: 600;
   font-size: 26px;
 }
+.about-us{
+  position: relative;
+  padding: 2%;
+  margin-top: -60px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  background-color: #f3f5fa;
+}
+.info-container {
+  padding: 20px;
+  padding-bottom: 300px;
+  position: relative;
+}
+
+.info-image {
+  position: absolute;
+  top: 0;
+  right: 0;
+
+  margin-top: 200px;
+  margin-right: 0px;
+  z-index: -3;
+}
+
 
 .about .content ul {
+  
   list-style: none;
   padding: 0;
 }
 
 .about .content ul li {
+  
   padding-left: 28px;
   position: relative;
 }
@@ -892,16 +945,25 @@ section {
   padding: 120px 0;
 }
 
+.cta h1 {
+  color: #fff;
+  font-size: 30px;
+  font-weight: 700;
+  padding-top: 10px;
+}
 .cta h3 {
   color: #fff;
-  font-size: 28px;
-  font-weight: 700;
+  font-size: 20px;
+  font-weight: 300;
+  padding-top: 10px;
 }
 
 .cta p {
   color: #fff;
 }
-
+.call-icons{
+  width: 60px;
+}
 .cta .cta-btn {
   font-family: "Jost", sans-serif;
   font-weight: 500;
@@ -935,163 +997,6 @@ section {
   }
 }
 
-/*--------------------------------------------------------------
-# Portfolio
---------------------------------------------------------------*/
-.portfolio #portfolio-flters {
-  list-style: none;
-  margin-bottom: 20px;
-}
-
-.portfolio #portfolio-flters li {
-  cursor: pointer;
-  display: inline-block;
-  margin: 10px 5px;
-  font-size: 15px;
-  font-weight: 500;
-  line-height: 1;
-  color: #444444;
-  transition: all 0.3s;
-  padding: 8px 20px;
-  border-radius: 50px;
-  font-family: "Poppins", sans-serif;
-}
-
-.portfolio #portfolio-flters li:hover,
-.portfolio #portfolio-flters li.filter-active {
-  background: #d082f7;
-  color: #fff;
-}
-
-.portfolio .portfolio-item {
-  margin-bottom: 30px;
-}
-
-.portfolio .portfolio-item .portfolio-img {
-  overflow: hidden;
-}
-
-.portfolio .portfolio-item .portfolio-img img {
-  transition: all 0.6s;
-}
-
-.portfolio .portfolio-item .portfolio-info {
-  opacity: 0;
-  position: absolute;
-  left: 15px;
-  bottom: 0;
-  z-index: 3;
-  right: 15px;
-  transition: all 0.3s;
-  background: rgba(55, 81, 126, 0.8);
-  padding: 10px 15px;
-}
-
-.portfolio .portfolio-item .portfolio-info h4 {
-  font-size: 18px;
-  color: #fff;
-  font-weight: 600;
-  color: #fff;
-  margin-bottom: 0px;
-}
-
-.portfolio .portfolio-item .portfolio-info p {
-  color: #f9fcfe;
-  font-size: 14px;
-  margin-bottom: 0;
-}
-
-.portfolio .portfolio-item .portfolio-info .preview-link,
-.portfolio .portfolio-item .portfolio-info .details-link {
-  position: absolute;
-  right: 40px;
-  font-size: 24px;
-  top: calc(50% - 18px);
-  color: #fff;
-  transition: 0.3s;
-}
-
-.portfolio .portfolio-item .portfolio-info .preview-link:hover,
-.portfolio .portfolio-item .portfolio-info .details-link:hover {
-  color: #d082f7;
-}
-
-.portfolio .portfolio-item .portfolio-info .details-link {
-  right: 10px;
-}
-
-.portfolio .portfolio-item:hover .portfolio-img img {
-  transform: scale(1.15);
-}
-
-.portfolio .portfolio-item:hover .portfolio-info {
-  opacity: 1;
-}
-
-/*--------------------------------------------------------------
-# Portfolio Details
---------------------------------------------------------------*/
-.portfolio-details {
-  padding-top: 40px;
-}
-
-.portfolio-details .portfolio-details-slider img {
-  width: 100%;
-}
-
-.portfolio-details .portfolio-details-slider .swiper-pagination {
-  margin-top: 20px;
-  position: relative;
-}
-
-.portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet {
-  width: 12px;
-  height: 12px;
-  background-color: #fff;
-  opacity: 1;
-  border: 1px solid #d082f7;
-}
-
-.portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #d082f7;
-}
-
-.portfolio-details .portfolio-info {
-  padding: 30px;
-  box-shadow: 0px 0 30px rgba(55, 81, 126, 0.08);
-}
-
-.portfolio-details .portfolio-info h3 {
-  font-size: 22px;
-  font-weight: 700;
-  margin-bottom: 20px;
-  padding-bottom: 20px;
-  border-bottom: 1px solid #eee;
-}
-
-.portfolio-details .portfolio-info ul {
-  list-style: none;
-  padding: 0;
-  font-size: 15px;
-}
-
-.portfolio-details .portfolio-info ul li+li {
-  margin-top: 10px;
-}
-
-.portfolio-details .portfolio-description {
-  padding-top: 30px;
-}
-
-.portfolio-details .portfolio-description h2 {
-  font-size: 26px;
-  font-weight: 700;
-  margin-bottom: 20px;
-}
-
-.portfolio-details .portfolio-description p {
-  padding: 0;
-}
 
 /*--------------------------------------------------------------
 # Team
@@ -1128,7 +1033,7 @@ section {
   font-weight: 700;
   margin-bottom: 5px;
   font-size: 20px;
-  color: #7947a2;
+  color: #500091;
 }
 
 .team .member span {
@@ -1802,6 +1707,10 @@ section {
   float: right;
   font-size: 13px;
 }
+.logo-img{
+  max-width: 80%;
+}
+
 
 #footer .credits a {
   transition: 0.3s;
@@ -1822,4 +1731,61 @@ section {
   #footer .credits {
     padding-top: 4px;
   }
+
+  
+/* TESTIMONIALS CSS /////// */
+
+}
+.testimonials {
+  height: 800px;
+  padding-top: 100px;
+
+}
+.testimonial-text{
+  color: #7947a2;
+}
+.testimonials h1{
+  text-align: center;
+  padding: 20px 0;
+}
+
+/* GLOBAL OFFICES CSS ////// */
+
+.global {
+  text-align: center;
+  padding-top: 40px;
+  padding-bottom: 100px;
+}
+.office-img{
+    background: linear-gradient(rgba(238, 210, 246, 0.9), rgba(200, 119, 255, 0.9)), url("../img/global-offices.jpg") fixed center center;
+    background-size: cover;
+    padding: 120px 0;
+}
+
+.off-img{
+  padding: 10% 0;
+}
+.global-office{
+  text-align: center;
+}
+.related-pages{
+  text-align: center;
+  padding-top: 5%;
+}
+.city-img {
+  background:url("../img/city.jpg") fixed center center;
+  background-size: cover;
+  padding: 200px 0;
+}
+.flags{
+  width: 32px;
+  padding-bottom: 4px;
+  padding-right: 5px;
+}
+.countries{
+  font-size: 1.3rem;
+  color: black;
+}
+.office-p{
+  font-size: 1.1rem;
 }
