--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2325,7 +2325,10 @@ section {
   font-weight: bold;
   transition: background-color 0.3s ease, transform 0.3s ease;
 }
-
+.bpw-img {
+  display: flex;
+  max-width: 9vh;
+}
 .custom-btn-group .custom-btn.active,
 .custom-btn-group .custom-btn:hover {
   background-color: #9e6bcd;
