--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1671,6 +1671,28 @@ section {
   background-size: cover;
   padding: 120px 0;
 }
+.bptw-slide {
+  background: -webkit-gradient(
+      linear,
+      left top,
+      left bottom,
+      from(rgba(255, 255, 255, 0.9)),
+      to(rgba(250, 250, 250, 0.9))
+    ),
+    url("../img/bptw-slide.jpg") fixed center center;
+  background: -o-linear-gradient(
+      rgba(255, 255, 255, 0.9),
+      rgba(255, 255, 255, 0.9)
+    ),
+    url("../img/bptw-slide.jpg") fixed center center;
+  background: linear-gradient(
+      rgba(245, 231, 255, 0.9),
+      rgba(228, 189, 255, 0.9)
+    ),
+    url("../img/bptw-slide.jpg") fixed center center;
+  background-size: cover;
+  padding: 200px 0;
+}
 
 .off-img {
   padding: 10% 0;
