finish jobs frontend

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -210,6 +210,17 @@ h6 {
   transition: 0.3s;
 }
 
+.pagination-btn {
+  transition: all 0.2s ease-in-out;
+}
+
+.pagination-btn:hover {
+  background-color: #0d6efd; 
+  color: white;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transform: scale(1.05);
+}
+
 .navbar a i,
 .navbar a:focus i {
   font-size: 12px;
